library boilerplate, and datasheet

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,14 @@
 platform = atmelavr
 board = uno
 framework = arduino
+build_flags = -DUNO
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 upload_protocol = esptool
+build_flags = -DESP32
 
 [env:esp8266]
 platform = espressif8266
@@ -26,3 +28,4 @@ board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 framework = arduino
 upload_protocol = esptool
+build_flags = -DESP8266
